--- a/Site/index.html
+++ b/Site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera <br>Its a great course</h1>
+<h1>Hello Coursera <br>Sup</h1>
 </body>
 </html>
